--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= simple_form_for @gram do |f| %>
   <%= f.input :message %>
-  <%= f.submit "Hello!" %>
+  <%= f.submit "Enter!" %>
   <%= f.input :picture %>
   <%= f.submit "Post!", class: 'my-btn' %>
 <% end %>
